--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.564.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-paystack": "^6.0.0",
+    "react-router-dom": "^7.13.0",
     "vue": "^3.5.25"
   },
   "devDependencies": {
